--- a/Sunduk.PWA/Pages/NC.razor
+++ b/Sunduk.PWA/Pages/NC.razor
@@ -5,115 +5,116 @@
 
 <style>
     .monofield {
-        font-family: 'PT Mono', monospace;
+        font-family: 'Roboto Mono', monospace;
+        font-size: xx-small;
     }
 </style>
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
-    <MudGrid>
-        <MudField Label="Заготовка" Variant="Variant.Outlined" Style="margin: 12px" Margin="Margin.Dense">
-            <MudGrid>
-                <MudItem xs="12" sm="6">
-                    <MudTextField @bind-Value="_WorkpieceExternalDiameter" Label="Наружный диаметр" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense" />
-                    <MudTextField @bind-Value="_WorkpieceInternalDiameter" Label="Внутренний диаметр" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense" />
-                </MudItem>
-                <MudItem xs="12" sm="6">
-                    <MudTextField @bind-Value="_WorkpieceLength" Label="Длина заготовки" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense" />
-                    <MudSelect @bind-Value="WorkpieceMaterial" Label="Материал" T="Materials" Variant="Variant.Text" Margin="Margin.Dense">
-                        <MudSelectItem Value="@Materials.Steel">Черная сталь</MudSelectItem>
-                        <MudSelectItem Value="@Materials.Stainless">Нержавеющая сталь</MudSelectItem>
-                        <MudSelectItem Value="@Materials.Brass">Бронза</MudSelectItem>
-                    </MudSelect>
-                </MudItem>
-            </MudGrid>
-        </MudField>
-        <MudField Label="Деталь" Variant="Variant.Outlined" Style="margin: 12px" Margin="Margin.Dense">
-            <MudGrid>
-                <MudItem xs="12" sm="6">
-                    <MudTextField @bind-Value="DetailName" Label="Наименование" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense" />
-                    <MudNumericField @bind-Value="OperationNumber" Label="Номер установа" Variant="Variant.Text" Immediate="true" Format="D1" Min="0" Max="10" Margin="Margin.Dense" />
-                </MudItem>
-                <MudItem xs="12" sm="6">
-                    <MudTextField @bind-Value="DetailNumber" Label="Обозначение" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense" />
-                    <MudTextField @bind-Value="DrawningVersion" Label="Версия чертежа" Variant="Variant.Text" Immediate="true" Converter="Util.DoubleConverter" Margin="Margin.Dense" />
-                </MudItem>
-            </MudGrid>
-        </MudField>
-        <MudItem xs="12" sm="6">
-            <MudSelect @bind-Value="Machine" Label="Станок" T="Machines" Variant="Variant.Outlined" Dense="false">
-                <MudSelectItem Value="@(Machines.GS1500)">Goodway GS-1500</MudSelectItem>
-                <MudSelectItem Value="@(Machines.L230A)">Hyundai L230A</MudSelectItem>
-            </MudSelect>
-        </MudItem>
-        <MudItem xs="12" sm="3">
-            <MudTextField @bind-Value="SpindleLimit" Label="Ограничение оборотов" Variant="Variant.Outlined" Immediate="true" />
-        </MudItem>
-        <MudItem xs="12" sm="3">
-            <MudButton Variant="Variant.Outlined" Color="Color.Primary" FullWidth="true" Style="margin-top: 6px; height: 56px"
-                       OnClick="@(async () => await BlazorDownloadFileService.DownloadFileFromText(NcDetailNumber + ".nc", ProgramText, "text/plain"))">Скачать программу</MudButton>
-        </MudItem>
-        <MudGrid>
-            <MudItem xs="12" sm="5" md="4">
-                <MudButton Style="margin: 12px; margin-top: 3px" FullWidth="true" Variant="Variant.Outlined"
-                           Color="Color.Primary" OnClick="OpenSequencelDialog" Disabled="@(!ValidWorkpiece)">Добавить переход</MudButton>
-                <MudField Label="Список переходов" Variant="Variant.Filled" Margin="Margin.Dense" Style="margin-left: 12px; margin-right: -12px">
-                    <MudList Clickable="true" Dense="true" @bind-SelectedItem="SelectedSequence" DisableGutters="true">
-                        @if (Program != null)
-                        {
-                            @foreach (var seq in Program)
-                            {
-                                if (Program.IndexOf(seq) == 0)
-                                {
-                                    <MudListItem Text="@($"{Program.IndexOf(seq) + 1}. {seq.Name}")">
-                                        <MudGrid>
-                                            <MudItem>
-                                                <MudText>@($"{Program.IndexOf(seq) + 1}. {seq.Name}")</MudText>
-                                            </MudItem>
-                                        </MudGrid>
-                                    </MudListItem>
-                                }
-                                if (Program.IndexOf(seq) > 1)
-                                {
-                                    <MudListItem Text="@($"{Program.IndexOf(seq)}. {seq.Name}")">
-                                        <MudGrid>
-                                            <MudItem>
-                                                <MudText>@($"{Program.IndexOf(seq)}. {seq.Name}")</MudText>
-                                            </MudItem>
-                                            <MudItem>
-                                                @if (($"{Program.IndexOf(seq)}. {seq.Name}") == (SelectedSequence?.Text ?? string.Empty) && Program.IndexOf(seq) != 0 && Program.IndexOf(seq) != 1)
-                                                {
-                                                    @if (Program.IndexOf(seq) != 2)
-                                                    {
-                                                        <MudIconButton Icon="@Icons.Material.Filled.KeyboardArrowUp" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small"
-                                                                       Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => MoveUpSequence(seq))" />
-                                                    }
-                                                    @if (Program.IndexOf(seq) != Program.Count - 1)
-                                                    {
-                                                        <MudIconButton Icon="@Icons.Material.Filled.KeyboardArrowDown" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small"
-                                                                       Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => MoveDownSequence(seq))" />
-                                                    }
-                                                    <MudIconButton Icon="@Icons.Material.Filled.Edit" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small"
-                                                                   Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => OpenEditSequenceDialog(seq))" />
-                                                    <MudIconButton Icon="@Icons.Material.Filled.Delete" Variant="Variant.Outlined" Color="Color.Error" Size="Size.Small"
-                                                                   Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => Program.Remove(seq))" />
-                                                }
-                                            </MudItem>
-                                        </MudGrid>
-                                    </MudListItem>
-                                }
-                            }
-                        }
-                    </MudList>
-                </MudField>
+    <MudExpansionPanel Text="Наладка" Dense="true">
+        <MudGrid Spacing="1">
+            <MudItem xs="12" sm="7" md="9">
+                <MudSelect @bind-Value="Machine" Label="Станок" T="Machines" Variant="Variant.Outlined" Dense="true">
+                    <MudSelectItem Value="@(Machines.GS1500)">Goodway GS-1500</MudSelectItem>
+                    <MudSelectItem Value="@(Machines.L230A)">Hyundai L230A</MudSelectItem>
+                </MudSelect>
             </MudItem>
-            <MudItem xs="12" sm="7" md="8">
-                <MudField Label="Программа" Variant="Variant.Filled" Margin="Margin.Dense" Style="margin-right: 12px">
-                    <MudTextField T="string" DisableUnderLine="true" Class="monofield" Variant="Variant.Text" @bind-Text="@ProgramText" ReadOnly="true" Immediate="true" Lines="@(ProgramText.Count(x => x == '\n') + 2)" />
-                </MudField>
-                @*<MudTextField T="string" DisableUnderLine="true" Label="Тест" Class="monofield" Variant="Variant.Text" @bind-Text="@Message" ReadOnly="true" Immediate="true" Lines="50" />*@
+            <MudItem xs="12" sm="5" md="3">
+                <MudTextField @bind-Value="SpindleLimit" Label="Ограничение оборотов" Variant="Variant.Outlined" Immediate="true" Margin="Margin.Dense" />
+            </MudItem>
+            <MudItem xs="12" sm="6" md="4">
+                <MudTextField @bind-Value="_WorkpieceExternalDiameter" Label="Наружный диаметр" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense"/>
+            </MudItem>
+            <MudItem xs="12" sm="6" md="4">
+                <MudTextField @bind-Value="_WorkpieceInternalDiameter" Label="Внутренний диаметр" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense"/>
+            </MudItem>
+            <MudItem xs="12" sm="6" md="4">
+                @*<MudTextField @bind-Value="WorkpieceLength" Label="Длина заготовки" Adornment="Adornment.End" AdornmentText="мм" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense" />*@
+                <MudSelect @bind-Value="WorkpieceMaterial" Label="Материал" T="Materials" Variant="Variant.Text" Dense="true">
+                    <MudSelectItem Value="@Materials.Steel">Черная сталь</MudSelectItem>
+                    <MudSelectItem Value="@Materials.Stainless">Нержавеющая сталь</MudSelectItem>
+                    <MudSelectItem Value="@Materials.Brass">Бронза</MudSelectItem>
+                </MudSelect>
+            </MudItem>
+            <MudItem xs="12" sm="6" md="6">
+                <MudTextField @bind-Value="DetailName" Label="Наименование" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense"/>
+            </MudItem>
+            <MudItem xs="12" sm="6" md="6">
+                <MudTextField @bind-Value="DetailNumber" Label="Обозначение" Variant="Variant.Text" Immediate="true" Margin="Margin.Dense"/>
+            </MudItem>
+            <MudItem xs="12" sm="6" md="6">
+                <MudNumericField @bind-Value="OperationNumber" Label="Номер установа" Variant="Variant.Text" Immediate="true" Format="D1" Min="0" Max="10" Margin="Margin.Dense"/>
+            </MudItem>
+            <MudItem xs="12" sm="6" md="6">
+                <MudTextField @bind-Value="DrawningVersion" Label="Версия чертежа" Variant="Variant.Text" Immediate="true" Converter="Util.DoubleConverter" Margin="Margin.Dense"/>
             </MudItem>
         </MudGrid>
-    </MudGrid>
+    </MudExpansionPanel>
+
+    <MudIconButton Variant="Variant.Outlined" Color="Color.Primary" Icon="@Icons.Material.Filled.Save" Title="Скачать программу"
+                    OnClick="@(async () => await BlazorDownloadFileService.DownloadFileFromText(NcDetailNumber + ".nc", ProgramText, "text/plain"))" />
+
+<MudGrid>
+    <MudItem xs="12" sm="5" md="4">
+        <MudButton Style="margin: 12px; margin-top: 3px" FullWidth="true" Variant="Variant.Outlined"
+                    Color="Color.Primary" OnClick="OpenSequencelDialog" Disabled="@(!ValidWorkpiece)">Добавить переход</MudButton>
+        <MudField Label="Список переходов" Variant="Variant.Filled" Margin="Margin.Dense">
+            <MudList Clickable="true" Dense="true" @bind-SelectedItem="SelectedSequence" DisableGutters="true">
+                @if (Program != null)
+                {
+                    @foreach (var seq in Program)
+                    {
+                        if (Program.IndexOf(seq) == 0)
+                        {
+                            <MudListItem Text="@($"{Program.IndexOf(seq) + 1}. {seq.Name}")">
+                                <MudGrid>
+                                    <MudItem>
+                                        <MudText>@($"{Program.IndexOf(seq) + 1}. {seq.Name}")</MudText>
+                                    </MudItem>
+                                </MudGrid>
+                            </MudListItem>
+                        }
+                        if (Program.IndexOf(seq) > 1)
+                        {
+                            <MudListItem Text="@($"{Program.IndexOf(seq)}. {seq.Name}")">
+                                <MudGrid>
+                                    <MudItem>
+                                        <MudText>@($"{Program.IndexOf(seq)}. {seq.Name}")</MudText>
+                                    </MudItem>
+                                    <MudItem>
+                                        @if (($"{Program.IndexOf(seq)}. {seq.Name}") == (SelectedSequence?.Text ?? string.Empty) && Program.IndexOf(seq) != 0 && Program.IndexOf(seq) != 1)
+                                        {
+                                            @if (Program.IndexOf(seq) != 2)
+                                            {
+                                                <MudIconButton Icon="@Icons.Material.Filled.KeyboardArrowUp" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small"
+                                                                Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => MoveUpSequence(seq))" />
+                                            }
+                                            @if (Program.IndexOf(seq) != Program.Count - 1)
+                                            {
+                                                <MudIconButton Icon="@Icons.Material.Filled.KeyboardArrowDown" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small"
+                                                                Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => MoveDownSequence(seq))" />
+                                            }
+                                            <MudIconButton Icon="@Icons.Material.Filled.Edit" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small"
+                                                            Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => OpenEditSequenceDialog(seq))" />
+                                            <MudIconButton Icon="@Icons.Material.Filled.Delete" Variant="Variant.Outlined" Color="Color.Error" Size="Size.Small"
+                                                            Style="margin-top: -3px; margin-bottom: -5px;" OnClick="(() => Program.Remove(seq))" />
+                                        }
+                                    </MudItem>
+                                </MudGrid>
+                            </MudListItem>
+                        }
+                    }
+                }
+            </MudList>
+        </MudField>
+    </MudItem>
+    <MudItem xs="12" sm="7" md="8">
+        <MudField Label="Программа" Variant="Variant.Filled" Margin="Margin.Dense" Style="margin-right: 12px">
+            <MudTextField T="string" DisableUnderLine="true" Class="monofield" Variant="Variant.Text" @bind-Text="@ProgramText" ReadOnly="true" Immediate="true" Lines="@(ProgramText.Count(x => x == '\n') + 2)" />
+        </MudField>
+        @*<MudTextField T="string" DisableUnderLine="true" Label="Тест" Class="monofield" Variant="Variant.Text" @bind-Text="@Message" ReadOnly="true" Immediate="true" Lines="50" />*@
+    </MudItem>
+</MudGrid>
 </MudContainer>
 
 @code
@@ -249,6 +250,22 @@
         Program.Add(new HeaderSequence(Machine, DetailNumber, DetailName, DrawningVersion, string.Empty) { Name = $"Шапка"});
         Program.Add(new SafetyStringSequence(Machine, 3000) { Name = $"Строка безопасности" });
         CyclesCount = 1;
+    }
+
+    private void OpenSetupDialog()
+    {
+        var parameters = new DialogParameters();
+        parameters.Add(nameof(Machine), Machine);
+        parameters.Add(nameof(SpindleLimit), SpindleLimit);
+        parameters.Add(nameof(Tools), Tools);
+        parameters.Add(nameof(WorkpieceExternalDiameter), WorkpieceExternalDiameter);
+        parameters.Add(nameof(WorkpieceInternalDiameter), WorkpieceInternalDiameter);
+        parameters.Add(nameof(WorkpieceLength), WorkpieceLength);
+        parameters.Add(nameof(WorkpieceMaterial), WorkpieceMaterial);
+        parameters.Add(nameof(DetailNumber), DetailNumber);
+        parameters.Add(nameof(DetailName), DetailName);
+        var options = new DialogOptions() { FullScreen = true, CloseButton = true };
+        DialogService.Show<SetupDialog>("Наладка", parameters, options);
     }
 
     private void OpenToolDialog()
